unpackaged/main/default/objects/Lista_de_Planning__c/Lista_de_Planning__c.object-meta.xml
<CustomObject>
    <label>Lista de Planning</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas de Planning</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>