unpackaged/main/default/objects/Lista_de_Planning__c/fields/Categoria_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Financiamiento__c</fullName>
    <label>Categoría</label>
    <length>100</length>
    <type>Text</type>
</CustomField>