unpackaged/main/default/objects/Lista_de_Planning__c/fields/Clase_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Clase_Bonificacion__c</fullName>
    <label>Clase Bonificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>