unpackaged/main/default/objects/Lista_de_Planning__c/fields/Clase_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Clase_Financiamiento__c</fullName>
    <label>Clase Financiamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>