unpackaged/main/default/objects/Lista_de_Planning__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <label>Fraccionamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>