unpackaged/main/default/objects/Lista_de_Planning__c/fields/Monto_o_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Monto_o_Porcentaje__c</fullName>
    <label>Monto / Porcentaje</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>