unpackaged/main/default/objects/Lista_de_Planning__c/fields/Mts_Excedentes__c.field-meta.xml
<CustomField>
    <fullName>Mts_Excedentes__c</fullName>
    <label>Mts. Excedentes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>