unpackaged/main/default/objects/Lista_de_Planning__c/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <label>Nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>