unpackaged/main/default/objects/Lista_de_Planning__c/fields/Nombre_Lista_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Lista_de_Bonificacion__c</fullName>
    <label>Nombre Lista de Bonificación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>