unpackaged/main/default/objects/Lista_de_Planning__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>