unpackaged/main/default/objects/Lista_de_Planning__c/fields/Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>