unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Cablevision__c.field-meta.xml
<CustomField>
    <fullName>Precio_Cablevision__c</fullName>
    <label>Precio Cablevisión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>