unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Esquina__c.field-meta.xml
<CustomField>
    <fullName>Precio_Esquina__c</fullName>
    <label>Precio Esquina</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>