unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Frente_Parque__c.field-meta.xml
<CustomField>
    <fullName>Precio_Frente_Parque__c</fullName>
    <label>Precio Frente Parque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>