unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lado_Sombra__c</fullName>
    <label>Precio Lado Sombra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>