unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Lista_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Precio_Lista_Solicitado__c</fullName>
    <label>Precio Lista Solicitado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>