unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Mt_Excedente__c.field-meta.xml
<CustomField>
    <fullName>Precio_Mt_Excedente__c</fullName>
    <label>Precio Mt.Excedente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>