unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Sobre_Avenida__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sobre_Avenida__c</fullName>
    <label>Precio Sobre Avenida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>