unpackaged/main/default/objects/Lista_de_Planning__c/fields/Precio_Sugerido__c.field-meta.xml
<CustomField>
    <fullName>Precio_Sugerido__c</fullName>
    <label>Precio Sugerido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>