unpackaged/main/default/objects/Lista_de_Planning__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <label>Producto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>