unpackaged/main/default/objects/Lista_de_Planning__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <label>Prototipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>