unpackaged/main/default/objects/Lista_de_Planning__c/fields/Tipo_de_Financiamiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Financiamiento__c</fullName>
    <label>Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>