unpackaged/main/default/objects/Lista_de_Planning__c/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <label>Tipo de Registro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>