unpackaged/main/default/objects/Lista_de_Planning__c/recordTypes/Lista_de_Precios_Batch_Prods.recordType-meta.xml
<RecordType>
    <fullName>Lista_de_Precios_Batch_Prods</fullName>
    <active>true</active>
    <description>Para registro master con RT &#39;Aprobación Listas de Precios Batch Prods&#39;</description>
    <label>Lista de Precios Batch Prods</label>
</RecordType>