unpackaged/main/default/objects/Lista_de_Planning__c/recordTypes/Listas_de_Bonificaciones.recordType-meta.xml
<RecordType>
    <fullName>Listas_de_Bonificaciones</fullName>
    <active>true</active>
    <description>Listas de Bonificaciones</description>
    <label>Listas de Bonificaciones</label>
</RecordType>