unpackaged/main/default/objects/Lista_de_Planning__c/recordTypes/Listas_de_Financiamiento.recordType-meta.xml
<RecordType>
    <fullName>Listas_de_Financiamiento</fullName>
    <active>true</active>
    <description>Listas de Financiamiento</description>
    <label>Listas de Financiamiento</label>
</RecordType>