unpackaged/main/default/objects/Lista_de_Planning__c/recordTypes/Listas_de_Precios.recordType-meta.xml
<RecordType>
    <fullName>Listas_de_Precios</fullName>
    <active>true</active>
    <description>Listas de Precios</description>
    <label>Listas de Precios</label>
</RecordType>